--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "@Bvlktech",
-  "name": "blogist",
+  "name": "blogerist",
   "description": "Starter blog built with GatsbyJS.",
   "version": "1.0.0",
   "dependencies": {
